<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView8"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadmaps_for1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/android"
            android:layout_height="150dp"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_development" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/web"
            android:layout_height="150dp"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView3"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_development" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/c"
            android:layout_height="150dp"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView4"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/java"
            android:layout_height="150dp"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/ml"
            android:layout_height="150dp"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView6"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mlops" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/game"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/textView7"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_development" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />
</LinearLayout>